@@ -374,7 +374,9 @@ CODE:
   RETVAL = 0;
   
   SV *valuecopy = sv_mortalcopy(value);
-  sv_utf8_encode(valuecopy);
+  if (SvUTF8(value) != 0) {
+    sv_utf8_encode(valuecopy);
+  }
   int len = sv_len(valuecopy);
   SV *data = sv_2mortal(newSV(4 + len));
   char i32[4];
